@@ -1,3 +1,10 @@
+2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>
+
+	* server/gam_inotify.c: (gam_inotify_mask_to_gam_file_event),
+	(gam_inotify_mask_to_gam_dir_event),
+	(gam_inotify_process_event_queue), (gam_inotify_remove_all_for): Add some
+	comments and refactor some code.
+
 2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>
 
 	* server/gam_conf.c: (gam_conf_read): Fix build.
